fix: align image center

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,9 @@ p {
 
 .profile-image {
     border-radius: 50%;
-    padding-right: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .about-text {
